# pybackpack

./: CHANGELOG  INSTALL  README  README.md  setup.py
data/: pybackpack.desktop
debian/: copyright  watch
debian/.svn/: entries
debian/.svn/text-base/: changelog.svn-base  control.svn-base  copyright.svn-base  menu.svn-base  watch.svn-base
debian/source/.svn/: entries
docs/: pybackpack.1
po/: README  cs.po  de.po  es_ES.po  fr.po  it.po  ja.po  merge-new.sh  pybackpack.pot  ru.po  sv.po  test-trans.sh
pybackpack/: Copy.py  GtkCellRendererWidget2.c  GtkCellRendererWidget2.h  LogHandler.py  actions.py  backupsets.py  backuptool.py  dialogs.py  filechooser.glade  filechooser.py  filechooser.ui  findfiles.py  gui.glade  gui.py  gui.ui  mdt.ui  mkisofs.py  rdiff_interface.py  seteditor.glade  seteditor.py  seteditor.ui  statuswindow.glade  statuswindow.py  statuswindow.ui  version.py
scripts/: pybackpack
xtk/: Makefile.am  configure.ac
xtk/test/: Makefile.am  test.c
